2009-04-13  Tyler Romeo  <tylerromeo@gmail.com>

	*app/bootstrap.py: Fixed module names due to new directory structure.

	Request model has been changed into a factory: class is a factory by default and is used to make child instances.
	Intra-package references for the AccountShell controller now work.

	Other various syntax errors.

2009-03-31  Tyler Romeo  <tylerromeo@gmail.com>

	*app/controllers/AccountShell.py (AccountShell.execute): Fixed usage of 'false'. Hopefully this is the last.
	Moved the retrieval of the menu choice and the handling of the choice itself to separate functions.

	*app/models/Config.py (Config.__init__): Removed initOptions, unnecessary.
	*app/models/Config.py (Config.updateFromFile): Added line to strip newline at end of configuration options.

	*app/models/Database.py (Database.updateFromFile): Fixed mixup of variable names.
	*app/models/Database.py (Database.RequestFilename): Fixed path resolution using os.path.abspath().

2009-03-27  Tyler Roemo  <tylerromeo@gmail.com>

	Exchanged invalid "true" and "false" return values with 1 and 0.

	Added controller for Account Shell.

	*app/models/Config.py (Config.__init__): Removed default value for initOptions since a dictionary is expected.
	*app/models/Config.py (Config.updateFromFile): Removed usage of ROOTPATH variable.
	*app/models/Config.py (Config.updateToFile): Same as above.

	*app/models/Request.py (Request): Added variable to identify new account request.
	Added function to check passwords on requests.

	*app/views/AccountShell.py (MainMenu): Removed unnecessary parameter.
	Replaced lists in the Request_* functions and QuestionList common view with dictionaries for support with Request class.

2009-03-26  Tyler Romeo  <tylerromeo@gmail.com>

	*app/views/AccountShell.py (MainMenu): Changed nature of view by letting the controller loop the menu instead of the view.
	Added the Request_* functions, which will return user information to MainMenu() and then to the controller.
