@@ -1,4 +1,0 @@
-#!/bin/bash
-
-python ./app/acctshell
-logout
